docker-compose/templates/mobius-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: mobius
  name: mobius
spec:
  containers:
  - env:
    - name: MQTT_HOST
      value: mosquitto
    - name: MYSQL_HOST
      value: mysql
    - name: MYSQL_PWD
    image: easyglobalmarket/mobius:latest
    name: mobius
    ports:
    - containerPort: 7579
    resources: {}
  restartPolicy: OnFailure
status: {}
