docker-compose/templates/mosquitto-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: mosquitto
  name: mosquitto
spec:
  containers:
  - image: eclipse-mosquitto
    name: mosquitto
    ports:
    - containerPort: 9001
    - containerPort: 1883
    resources: {}
    volumeMounts:
    - mountPath: /mosquitto/data
      name: mosquitto-storage
  restartPolicy: OnFailure
  volumes:
  - name: mosquitto-storage
    persistentVolumeClaim:
      claimName: mosquitto-storage
status: {}
