docker-compose/templates/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  containers:
  - env:
    - name: POSTGRES_DB
    - name: POSTGRES_PASSWORD
    - name: POSTGRES_USER
    image: timescale/timescaledb-postgis:latest-pg11
    name: postgres
    ports:
    - containerPort: 5432
    resources: {}
    volumeMounts:
    - mountPath: /var/lib/postgresql/data
      name: postgres-storage
    - mountPath: /docker-entrypoint-initdb.d/V1__init.sql
      name: postgres-claim1
  restartPolicy: OnFailure
  volumes:
  - name: postgres-storage
    persistentVolumeClaim:
      claimName: postgres-storage
  - name: postgres-claim1
    persistentVolumeClaim:
      claimName: postgres-claim1
status: {}
