docker-compose/templates/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.service.expose: "true"
    kompose.service.type: nodeport
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: grafana
  type: NodePort
status:
  loadBalancer: {}
