docker-compose/templates/onem2m-recorder-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: onem2m-recorder
  name: onem2m-recorder
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: onem2m-recorder
status:
  loadBalancer: {}
